<resources>
    <string name="app_name">History Quiz</string>
    <string name="welcome_text">Добро пожаловать в викторину по истории! "\n" Вы будете отвечать на вопросы по истории, "\n"
        на каждый ответ у вас будет по 30 секунд. "\n" Посмотрим как хорошо вы знаете историю? "\n" Нажмите \"СТАРТ\" для начала викторины!</string>
    <string name="start_button_text">СТАРТ</string>
    <string name="score_text">Количество очков: </string>
    <string name="time_left_text">00:30</string>
    <string name="confirm_text">ПОДТВЕРДИТЬ</string>
    <string name="highscore_text">Рекорд: </string>
    <string name="about_text">
        Это приложение было разработано несколькими студентами из ГТК МУЦА, специально для предмета "Мировая История".\n\nРазработчики: Забиров Самир, Марал уулу Инсар, Тынчыбек уулу Азим, Болотов Кайрат.\n\n
        Благодарим за то, что пользуетесь нашим приложением.
    </string>
    <string name="about_button_text">О разработчике</string>
</resources>
